fix dialog z-index and small calendar bug

--- a/pipette.css
+++ b/pipette.css
@@ -54,6 +54,10 @@ button:hover {
 	background-color: var(--dark-blue);
 }
 
+dialog {
+	z-index: 3;
+}
+
 header {
 	float: left;
 }
